--- a/packages/playground-vite/index.html
+++ b/packages/playground-vite/index.html
@@ -7,6 +7,7 @@
     <title>Vite + Vue + TS</title>
   </head>
   <body>
+    <div class="container">mini-vite来了！</div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
