feat: 更新欢迎信息和项目链接，将 mini-vite 更名为 mini-impl，并新增对 mini-vue 的测试说明。

--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -9,13 +9,13 @@
   <body>
     <div id="app">
       <img src="/vite.svg" alt="Vite logo" height="120" />
-      <h1>Welcome to mini-vite!</h1>
+      <h1>Welcome to mini-impl!</h1>
       <div class="card">
-        <p>This is a playground to test <code>mini-vite</code>.</p>
+        <p>This is a playground to test <code>mini-vite</code> <code>mini-vue</code>.</p>
         <button type="button">Test Button</button>
       </div>
       <p>
-        <a href="https://github.com/Mstara/mini-impl" target="_blank"
+        <a href="https://github.com/Little-LittleProgrammer/mini-impl" target="_blank"
           >Visit the Project</a
         >
       </p>
