feat: 更新欢迎信息，新增控制台提示；优化计算器模块的日志输出，修正计算公式；移除不必要的日志输出。

--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -26,7 +26,7 @@
 
       <h1>Welcome to mini-impl!</h1>
       <div class="card">
-        <p>This is a playground to test <code>mini-vite</code> <code>mini-vue</code>.</p>
+        <p>This is a playground to test <code>mini-vite</code> <code>mini-vue</code>. more info see console</p>
       </div>
       <p>
         <a href="https://github.com/Little-LittleProgrammer/mini-impl" target="_blank"
